--- a/institute-web/src/app/app.component.html
+++ b/institute-web/src/app/app.component.html
@@ -1,10 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
-    Welcome to {{ title }}!
+    {{username}} Welcome to {{ title }}!
   </h1>
-  <img width="300" alt="Angular Logo" src="http://fancyfoundation.org.pk/wp-content/uploads/thumbs_736x490_Blackrock-Further-Education-Institute-2-736x368.jpg">
+  <img width="500" (click)="onLogoClick()" alt="Intro Logo" src="http://fancyfoundation.org.pk/wp-content/uploads/thumbs_736x490_Blackrock-Further-Education-Institute-2-736x368.jpg">
 </div>
+Type your name here<input class="demo" (keyup)="OnkeyUp(titleInput.value)" [value]="username" #titleInput>
 <div class="container">
   <table class="table table-dark table-hover table-striped">
     <thead class="thead-light">
@@ -29,17 +30,4 @@
     </tbody>
   </table>
 </div>
-<h2>Here are some links to help you start: </h2>
-<ul>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
-  </li>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://angular.io/cli">CLI Documentation</a></h2>
-  </li>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
-  </li>
-</ul>
-
 <router-outlet></router-outlet>
