--- a/institute-web/src/app/app.component.html
+++ b/institute-web/src/app/app.component.html
@@ -6,28 +6,16 @@
   <img width="500" (click)="onLogoClick()" alt="Intro Logo" src="http://fancyfoundation.org.pk/wp-content/uploads/thumbs_736x490_Blackrock-Further-Education-Institute-2-736x368.jpg">
 </div>
 Type your name here<input class="demo" (keyup)="OnkeyUp(titleInput.value)" [value]="username" #titleInput>
-<div class="container">
-  <table class="table table-dark table-hover table-striped">
-    <thead class="thead-light">
-      <tr>
-        <th>Name</th>
-        <th>Age</th>        
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Steve Smith</td>
-        <td>28</td>
-      </tr>
-      <tr>
-        <td>David Warner</td>
-        <td>29</td>        
-      </tr>
-      <tr>
-        <td>Joe Root</td>
-        <td>27</td>        
-      </tr>
-    </tbody>
-  </table>
-</div>
-<router-outlet></router-outlet>
+<div class="classes">
+<div class="class-card">
+    <div class="class-title">
+      subject
+    </div>
+    <img width="200" src="https://s16815.pcdn.co/wp-content/uploads/2017/06/iStock-609683672-studying.jpg">
+    <div class="class-description">
+      students enter here
+    </div>
+ </div>
+ 
+ </div>
+ 
