teacher and student entrance implementing

--- a/institute-web/src/app/app.component.html
+++ b/institute-web/src/app/app.component.html
@@ -16,6 +16,16 @@ Type your name here<input class="demo" (keyup)="OnkeyUp(titleInput.value)" [valu
       students enter here
     </div>
  </div>
+
+ <div class="class-card">
+  <div class="class-title">
+    Teacher
+  </div>
+  <img width="200" src="https://tedideas.files.wordpress.com/2018/03/featured_art_teachers_istock.jpg?w=750">
+  <div class="class-description">
+    teachers enter here
+  </div>
+</div>
  
  </div>
  
